@@ -1,3 +1,4 @@
+requires "Path::Tiny" => "0";
 requires "perl" => "5.008001";
 requires "strict" => "0";
 requires "warnings" => "0";
