@@ -1,0 +1,5 @@
+use strict;
+use warnings;
+
+package Foo;
+1;
