@@ -2,6 +2,11 @@ Revision history for Test-DiagINC
 
 {{$NEXT}}
 
+    [CHANGED]
+
+    - Will not report modules loaded from below the current directory
+      (suggested by Peter Rabbitson)
+
 0.001     2014-02-04 15:12:52-05:00 America/New_York
 
     - First release
